--- a/Group_3_CAP/Group_3_Logistic_Regression-SMOTE/Group_3_SMOTE_logistic_regression.ipynb
+++ b/Group_3_CAP/Group_3_Logistic_Regression-SMOTE/Group_3_SMOTE_logistic_regression.ipynb
@@ -135,7 +135,7 @@
     "id": "un6aXeGQ-Bd2"
    },
    "source": [
-    "# Building the ANN"
+    "# Building logistic regression"
    ]
   },
   {
@@ -372,7 +372,7 @@
     "id": "aa-vi0QM-LC9"
    },
    "source": [
-    "# Making the Confusion Matrix"
+    "#"
    ]
   },
   {
